# DigitalJulius

./: .gitignore  LICENSE  README.md  pyproject.toml
digitaljulius/: __init__.py  __main__.py  approver.py  auth.py  budget.py  cli.py  commands.py  completions.py  complexity.py  config.py  consensus.py  core_directives.py  events.py  history.py  installer.py  knowledge.py  log.py  orchestrator.py  planning.py  progress_reporter.py  project_ctx.py  providers.py  roles.py  secrets.py  self_modify.py  single_agent.py  state.py  ui.py
digitaljulius/agents/: __init__.py  base.py  claude.py  codex.py  gemini.py  github.py  openai_adapter.py  qwen.py  registry.py
