[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digitaljulius"
version = "0.2.0"
description = "Multi-agent orchestrator routing across Claude, OpenAI, Codex, Gemini, and GitHub Models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Julius Carter" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "prompt_toolkit>=3.0",
    "pydantic>=2.7",
    "tomli>=2; python_version<'3.11'",
    "tomli_w>=1",
]

[project.scripts]
digitaljulius = "digitaljulius.cli:main"
dj = "digitaljulius.cli:main"

[tool.setuptools.packages.find]
include = ["digitaljulius*"]
exclude = ["tests*"]
